# pydantic-api-sdk-notion

./: .gitignore  .yamlfmt  .yamllint  LICENSE  README.md  devenv.nix  pyproject.toml
.github/workflows/: test.yml
pydantic_api/notion/sdk/: __init__.py  client.py  exception.py
pydantic_api/notion/sdk/endpoints/: __init__.py  base.py  blocks.py  comments.py  databases.py  pages.py  search.py  users.py
pydantic_api/notion/sdk/tools/: __init__.py  notion_database_linker.py
